# gea-back

./: .dockerignore  .env.example  .gitignore  API.md  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/arboles/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/arboles/migrations/: 0001_initial.py  0002_ubicacion_nombre_alter_arbol_nivel_infestacion.py  0003_alter_ubicacion_nombre.py  0004_arbol_coordenadas_alter_arbol_etiqueta.py
apps/core/: apps.py  exceptions.py  mixins.py  pagination.py  permissions.py  utils.py
apps/dashboard/: apps.py  urls.py  views.py
apps/recoleccion/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/recoleccion/migrations/: 0001_initial.py  0002_initial.py
apps/reportes/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/reportes/migrations/: 0001_initial.py  0002_initial.py  0003_alter_reporte_observaciones.py  0004_alter_reporte_n1_alter_reporte_n2_alter_reporte_n3.py
apps/reportes/tests/: test_models.py
apps/solicitudes/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/solicitudes/migrations/: 0001_initial.py  0002_alter_solicitud_n1_alter_solicitud_n2_and_more.py  0003_solicitud_coordenadas_exactas_and_more.py
apps/usuarios/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
requirements/: base.txt  dev.txt  prod.txt
(+7 files in other folders)
